Changes for 2.0.15rc1

New features:
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)
A.F....... [ZBX-1357] updated Polish translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)
..F....... [ZBX-9367] fixed "Status of Zabbix" and "System status" widget default refresh intervals (Ivo)
A......... [ZBX-5656] fixed maintenance.create and maintenance.update methods "timeperiods" parameter to be an array of arrays (Ivo)
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)
.......PS. [ZBX-9344] fixed infinite looping in telnet.run[] in case there is no password prompt (asaveljevs, dimir)
..F....... [ZBX-9281] fixed undefined offset in template screens when resource is URL (Ivo)
..F....... [ZBX-4633] fixed host inventories not displaying all filtered results when record count exceeds global limit (Ivo)
...G...PS. [ZBX-9284] added zabbix log file locking to avoid incomplete logging on log file rotation (igors)
..F....... [ZBX-9087] fixed DB_ID validation expression to properly validate upper bound of received value and fixed various front-end forms not properly validating IDs (Krists, Ivo)
...G...... [ZBX-9241] fixed possible vfs.fs.discovery item crash on AIX systems (wiper)
.......PS. [ZBX-9104] fixed repeated error messaging if ssh channel failed to close (igors)
........S. [ZBX-8993] added check for a valid reference of a global regular expression in lld rules (igors)
.......PS. [ZBX-9088] fixed parsing of SNMP traps for correct processing of delayed traps (igors)
A......... [ZBX-9093] fixed API host.create method for MySQL strict mode when given partial data in "inventory" property (Ivo)